objects/Quote_Approval_Step_Details__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Queue__c</fullName>
        <formula>Quote_Approver_Step_Approver_Detail__r.Owner:Queue.DeveloperName</formula>
        <label>Approver Queue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAP_Region__c</fullName>
        <formula>TEXT(Quote_Approval_Region__r.DAP_Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DAP Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Sequence__c</fullName>
        <label>Priority (Sequence)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Manager_Approval_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Manager Approval Group</label>
        <referenceTo>Product_Manager_Approval_Group__c</referenceTo>
        <relationshipLabel>Quote Approval Step Details</relationshipLabel>
        <relationshipName>Quote_Approval_Step_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Approval Region</label>
        <referenceTo>Quote_Approval_Regions__c</referenceTo>
        <relationshipLabel>Quote Approval Step Details</relationshipLabel>
        <relationshipName>Quote_Approval_Step_Details_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Approval_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Approval Step</label>
        <referenceTo>Quote_Approval_Steps__c</referenceTo>
        <relationshipLabel>Quote Approval Step Details</relationshipLabel>
        <relationshipName>Quote_Approver_Approver_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Approver_Step_Approver_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Approver Step Approver Detail</label>
        <referenceTo>Quote_Approver_Step_Approver_Details__c</referenceTo>
        <relationshipLabel>Quote Approval Step Details</relationshipLabel>
        <relationshipName>Quote_Approver_Approver_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Quote_Approval_Region__r.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>TEXT(Quote_Approval_Region__r.Sub_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <label>Quote Approval Step Details</label>
    <listViews>
        <fullName>ALL_PM</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region__c</columns>
        <columns>Product_Manager_Approval_Group__c</columns>
        <columns>Approver_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Manager_Approval_Group__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>ALL PM</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approver_Queue__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>DAP_Region__c</columns>
        <columns>Region__c</columns>
        <columns>Sub_Region__c</columns>
        <columns>Quote_Approval_Region__c</columns>
        <columns>Quote_Approval_Step__c</columns>
        <columns>Quote_Approver_Step_Approver_Detail__c</columns>
        <columns>Product_Manager_Approval_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Professional_Services_Discount_Queue_Quote_Approval_Step_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>Professional Services</label>
        <queue>Professional_Services_Discount_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PureCloud_Credit_Quote_Approval_Step_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>PureCloud Credit</label>
        <queue>PureCloud_Credit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>pM_Regan_MacDougall_Quote_Approval_Step_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>pM_Regan_MacDougall</label>
        <queue>pM_Regan_MacDougall</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>pm_Arnaud_Lejeune_Quote_Approval_Step_Details</fullName>
        <filterScope>Queue</filterScope>
        <label>pm_Arnaud_Lejeune</label>
        <queue>pm_Arnaud_Lejeune</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>QAD-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Approval Step Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>